--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,5 +1,7 @@
-<title>Getting Started</title>
-<link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" />
+<title>Exzeo Knockathon 2015</title>
+<link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css"/>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-<link rel="stylesheet" type="text/css" href="/stylesheets/main.css" />
+<link rel="stylesheet" type="text/css" href="/stylesheets/main.css"/>
+<script src="https://use.typekit.net/tco4ujm.js"></script>
+<script>try{Typekit.load({ async: true });}catch(e){}</script>
