--- a/views/partials/rules.ejs
+++ b/views/partials/rules.ejs
@@ -1,9 +1,9 @@
 <div class="container-fluid border border-gray"></div>
-<div class="container-fluid bg-gray rules">
+<div class="container-fluid bg-gray ">
     <div class="container">
         <div class="row">
-            <div class="col-md-offset-0 pd-5">
-                <h1 id="what-is-it" class="text-shadow huge">Rules &amp; Guidelines</h1>
+            <div class="col-md-offset-0">
+                <h1 id="rules" class="text-shadow huge">Rules &amp; Guidelines</h1>
             </div>
         </div>
         <div class="row">
@@ -39,7 +39,7 @@
                 </ul>
             </div>
         </div>
-        <div class="row">
+        <div class="row pd-5">
             <div class="col-md-8 col-md-offset-0 tk-acuta list">
                 <h2 class="medium">Facilities</h2>
                 <ul>
