--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,21 +1,25 @@
 <nav class="navbar navbar-default navbar-fixed-bottom navbar-inverse">
     <div class="container">
 
-        <ul class="nav navbar-nav">
+        <ul class="nav navbar-nav f18">
             <li>
                 <a href="#what-is-it"></span>What is it?</a>
             </li>
             <li>
-                <a href="https://devcenter.heroku.com/articles/how-heroku-works">Rules &amp; Guidelines</a>
+                <a href="#rules">Rules &amp; Guidelines</a>
+            </li>
+            <li>
+                <a href="#theme">Theme</a>
             </li>
         </ul>
 
-        <ul class="nav navbar-nav navbar-right">
+        <ul class="nav navbar-nav navbar-right f18">
             <li class="navbar-right">
-                <a href="https://devcenter.heroku.com">
+                <a href="#register-now">
                     Register now
                 </a>
             </li>
         </ul>
+
     </div>
 </nav>
