--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -4,28 +4,13 @@
     <% include ../partials/header.ejs %>
 </head>
 
-<body>
-
-<div class="jumbotron text-center entry">
-    <div class="container">
-        <div class="row">
-            <img src="/logo-no-foot.png"/>
-        </div>
-        <div class="row tit">
-            <h1 class="tk-droid-serif text-shadow brown">Exzeo Knockathon</h1>
-        </div>
-        <div class="row stit">
-            <h2 class="tk-acuta brown text-shadow">11 - 13 September 2015</h2>
-        </div>
-    </div>
-</div>
-
+<body data-spy="scroll" data-target="#main-navbar">
 <% include ../partials/nav.ejs %>
-<% include ../partials/what-is.ejs%>
-<% include ../partials/rules.ejs%>
-<% include ../partials/theme.ejs%>
-<% include ../partials/register.ejs%>
-
+<% include ../partials/entry.ejs%>
+<% include ../partials/what-is.ejs %>
+<% include ../partials/rules.ejs %>
+<% include ../partials/theme.ejs %>
+<% include ../partials/register.ejs %>
 
 </body>
 </html>
