--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,17 +1,65 @@
 <title>Exzeo Knockathon 2015</title>
 <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css"/>
+<link rel="stylesheet" href="/stylesheets/timer.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 <link rel="stylesheet" type="text/css" href="/stylesheets/main.css"/>
+<script src="/javascripts/timer.js"></script>
 <script src="https://use.typekit.net/tco4ujm.js"></script>
-<script>try{Typekit.load({ async: true });}catch(e){}</script>
+<script>try {
+        Typekit.load({async: true});
+    } catch (e) {
+    }</script>
 <script>
+
+    var _MS_PER_DAY = 1000 * 60 * 60 * 24;
+
+    // a and b are javascript Date objects
+    function dateDiffInDays(a, b) {
+        // Discard the time and time-zone information.
+        var utc1 = Date.UTC(a.getFullYear(), a.getMonth(), a.getDate());
+        var utc2 = Date.UTC(b.getFullYear(), b.getMonth(), b.getDate());
+
+        return Math.floor((utc2 - utc1) / _MS_PER_DAY);
+    }
+
     $(document).ready(function () {
-        var h = $(".entry").height() + $(".navbar").height() + 112;
+
+        var entry = $(".entry");
+        var navbar = $(".navbar");
+        var timerMessage = $("#timer-message");
+
+        var start = new Date();
+        var target = new Date(2015, 8, 11, 6, 30, 0, 0);
+        var time = start.getTime() + dateDiffInDays(start, target) * 24 * 60 * 60 * 1000
+
+        $('.clock').countdown({
+            timestamp: time,
+            callback: function (days, hours, minutes, seconds) {
+                var message = "";
+
+                message += days + " day" + ( days == 1 ? '' : 's' ) + ", ";
+                message += hours + " hour" + ( hours == 1 ? '' : 's' ) + ", ";
+                message += minutes + " minute" + ( minutes == 1 ? '' : 's' ) + " and ";
+                message += seconds + " second" + ( seconds == 1 ? '' : 's' ) + " <br />";
+
+                message += "left!";
+
+                timerMessage.html(message);
+            }
+        });
+
+        var docuHeight = $(window).height();
+
+        entry.height(docuHeight - navbar.height());
+
+        var h = entry.height();
 
         $(".what-is").height(h);
         $(".register").height(h);
         $(".theme").height(h);
+
+        $("#time-div").css("marginTop", h / 4);
     });
 </script>
 
