--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default navbar-fixed-bottom navbar-inverse">
+<nav id="main-navbar" class="navbar navbar-default navbar-fixed-top navbar-inverse">
     <div class="container">
 
         <ul class="nav navbar-nav f18">
