Added content for register.ejs

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -116,3 +116,8 @@ body {
 .aliceu {
     border-bottom: 3px solid aliceblue;
 }
+
+.orangeu {
+    border-bottom: 2px solid #ff8820;
+    z-index: 100;
+}
