--- a/views/partials/register.ejs
+++ b/views/partials/register.ejs
@@ -7,13 +7,72 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-8 col-md-offset-0 tk-droid-serif list">
-                <p>OK. So you're interested.</p>
+            <div class="col-md-8 col-md-offset-0 tk-acuta list">
+                <p>
+                    OK. So you're interested.
+                </p>
 
-                <p>There are two ways you can participate in the Knockathon. Either as a team member
-                in that case you have join someone or you can start your own team. Cool, right?</p>
+                <p>
+                    There are two ways you can participate in the Knockathon. Either as a team member by joining some
+                    team or start your own team.
+                </p>
 
-                [TBD .. place content here that explains the usage of Exzeo and all. Here we need to use API to build Join now and Register now kind of features]
+                <p>
+                    To <span class="orangeu">create your own Knockathon team</span>, follow this steps &ndash;
+                </p>
+
+                <ul class="list">
+                    <li>
+                        Signup for an organization in <a href="https://tryexzeo.com" target="_blank">tryexzeo.com</a>.
+                        You may want to use a new email address for that purpose, feel free to use gmail.com or any
+                        other free email service providers.
+                    </li>
+                    <li>
+                        When you enter your organization name, <span class="orangeu">have it prefixed with <i>knockathon-</i></span>,
+                        for example,
+                        <code>knokcathon-pandavs</code>, <code>knockathon-tigers</code> to name a few. Make it sound
+                        <span class="orangeu">cool</span> and <span class="orangeu">edgy</span>. This step is very
+                        important.
+                    </li>
+                    <li>
+                        <span class="orangeu">Look out for your team members</span>. You see, you need to sell your
+                        reputation to convince
+                        someone to join you instead of joining the other.
+                    </li>
+                    <li>
+                        Read <a href="#rules">rules and guidelines</a> to make sure your team is not rejected during
+                        registration. <span
+                                class="orangeu">Send out invitations from your Exzeo organization account</span>, those
+                        who are interested can join you that way.
+                    </li>
+                </ul>
+
+                <p>
+                    To <span class="orangeu">join an awesome team</span>, follow this steps &ndash;
+                </p>
+
+                <ul class="list">
+                    <li>
+                        You will <span class="orangeu">receive invitation emails to join an organization</span>, don't
+                        just go easy. Discuss and understand why you need to join their team. Once you're convinced
+                        accept the invitation. Make sure the role you're going to play correlates with your interest.
+                    </li>
+                    <li>
+                        If no one has invited you, DO NOT WORRY. <span class="orangeu">Create your own team</span>.
+                        Don't laugh. Throw the shyness
+                        away and get ready to knock others off. Don't give up. It is okay to loose than not fighting for
+                        it. After all, Knockathon is an internal event.
+                    </li>
+                    <li>
+                        Read <a href="#rules">rules and guidelines</a> to make sure you understand and help others.
+                    </li>
+                </ul>
+                <br/>
+
+                <p>
+                    You are ready to knockout. <strong>Good luck, Gents.</strong>
+                </p>
+
             </div>
         </div>
     </div>
