--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -9,13 +9,13 @@
                 <a href="#rules">Rules &amp; Guidelines</a>
             </li>
             <li>
-                <a href="#theme">Theme</a>
+                <a href="#themes">Theme</a>
             </li>
         </ul>
 
         <ul class="nav navbar-nav navbar-right f18">
             <li class="navbar-right">
-                <a href="#register-now">
+                <a href="#register-now" style="color:#F2DE9C!important">
                     Register now
                 </a>
             </li>
