--- a/views/partials/register.ejs
+++ b/views/partials/register.ejs
@@ -18,7 +18,7 @@
                 </p>
 
                 <p>
-                    To <span class="orangeu">create your own Knockathon team</span>, follow this steps &ndash;
+                    To <span class="registeru">create your own Knockathon team</span>, follow this steps &ndash;
                 </p>
 
                 <ul class="list">
@@ -28,37 +28,37 @@
                         other free email service providers.
                     </li>
                     <li>
-                        When you enter your organization name, <span class="orangeu">have it prefixed with <i>knockathon-</i></span>,
+                        When you enter your organization name, <span class="registeru">have it prefixed with <i>knockathon-</i></span>,
                         for example,
-                        <code>knokcathon-pandavs</code>, <code>knockathon-tigers</code> to name a few. Make it sound
-                        <span class="orangeu">cool</span> and <span class="orangeu">edgy</span>. This step is very
+                        <code>knockathon-pandavs</code>, <code>knockathon-tigers</code> to name a few. Make it sound
+                        <span class="registeru">cool</span> and <span class="registeru">edgy</span>. This step is very
                         important.
                     </li>
                     <li>
-                        <span class="orangeu">Look out for your team members</span>. You see, you need to sell your
+                        <span class="registeru">Look out for your team members</span>. You see, you need to sell your
                         reputation to convince
                         someone to join you instead of joining the other.
                     </li>
                     <li>
                         Read <a href="#rules">rules and guidelines</a> to make sure your team is not rejected during
                         registration. <span
-                                class="orangeu">Send out invitations from your Exzeo organization account</span>, those
+                                class="registeru">Send out invitations from your Exzeo organization account</span>, those
                         who are interested can join you that way.
                     </li>
                 </ul>
 
                 <p>
-                    To <span class="orangeu">join an awesome team</span>, follow this steps &ndash;
+                    To <span class="registeru">join an awesome team</span>, follow this steps &ndash;
                 </p>
 
                 <ul class="list">
                     <li>
-                        You will <span class="orangeu">receive invitation emails to join an organization</span>, don't
+                        You will <span class="registeru">receive invitation emails to join an organization</span>, don't
                         just go easy. Discuss and understand why you need to join their team. Once you're convinced
                         accept the invitation. Make sure the role you're going to play correlates with your interest.
                     </li>
                     <li>
-                        If no one has invited you, DO NOT WORRY. <span class="orangeu">Create your own team</span>.
+                        If no one has invited you, DO NOT WORRY. <span class="registeru">Create your own team</span>.
                         Don't laugh. Throw the shyness
                         away and get ready to knock others off. Don't give up. It is okay to loose than not fighting for
                         it. After all, Knockathon is an internal event.
