--- a/views/partials/theme.ejs
+++ b/views/partials/theme.ejs
@@ -1,22 +1,22 @@
 <div class="container-fluid border border-red"></div>
-<div id="theme"  class="container-fluid theme bg-red">
+<div class="container-fluid theme bg-red">
     <div class="container">
         <div class="row">
             <div class="col-md-offset-0 pd-5">
-                <h1 class="text-shadow huge">Knocathon Theme</h1>
+                <h1 id="themes" class="text-shadow huge">Knocathon Theme</h1>
             </div>
         </div>
         <div class="row">
-            <div class="col-md-8 col-md-offset-0 tk-droid-serif list">
+            <div class="col-md-8 col-md-offset-0 tk-acuta list">
                 <p><strong>Now the plot thickens .. </strong></p>
 
-                <p>The theme will be disclosed on September 11th in this very same section, so hang around this
+                <p>The theme will be disclosed on <strong class="themeu">September 11th morning</strong> in this very same section, so hang around this
                     page.</p>
             </div>
         </div>
         <div id="time-div" class="row text-center">
             <div class="clock"></div>
-            <p id="timer-message"></p>
+            <p class="tk-acuta" id="timer-message"></p>
         </div>
     </div>
 </div>
