--- a/views/partials/what-is.ejs
+++ b/views/partials/what-is.ejs
@@ -1,4 +1,5 @@
-<div class="container-fluid bg-green what-is">
+<div class="container-fluid border border-green"></div>
+<div class="container-fluid bg-green what-is-it">
     <div class="container">
         <div class="row">
             <div class="col-md-offset-0 pd-5">
