--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,10 +1,17 @@
 <title>Exzeo Knockathon 2015</title>
 <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css"/>
 <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    (function (i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function () {
+                    (i[r].q = i[r].q || []).push(arguments)
+                }, i[r].l = 1 * new Date();
+        a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
     ga('create', 'UA-67219791-1', 'auto');
     ga('send', 'pageview');
@@ -24,6 +31,7 @@
 
     var _MS_PER_DAY = 1000 * 60 * 60 * 24;
 
+
     // a and b are javascript Date objects
     function dateDiffInDays(a, b) {
         // Discard the time and time-zone information.
@@ -34,42 +42,78 @@
     }
 
     $(document).ready(function () {
+        timerSetup();
+        elementSize();
+    });
 
-        var entry = $(".entry");
-        var navbar = $(".navbar");
+    $(window).bind("resize", elementSize);
+
+    function timerSetup() {
+
         var timerMessage = $("#timer-message");
 
         var start = new Date();
         var target = new Date(2015, 8, 11, 6, 30, 0, 0);
-        var time = start.getTime() + dateDiffInDays(start, target) * 24 * 60 * 60 * 1000
+        var time = start.getTime() + dateDiffInDays(start, target) * 24 * 60 * 60 * 1000;
+
+        var underline = function(val) {
+            return '<span class="themeu">' + val + '</span>'
+        };
 
         $('.clock').countdown({
             timestamp: time,
             callback: function (days, hours, minutes, seconds) {
                 var message = "";
 
-                message += days + " day" + ( days == 1 ? '' : 's' ) + ", ";
-                message += hours + " hour" + ( hours == 1 ? '' : 's' ) + ", ";
-                message += minutes + " minute" + ( minutes == 1 ? '' : 's' ) + " and ";
-                message += seconds + " second" + ( seconds == 1 ? '' : 's' ) + " <br />";
+                message += underline(days) + " day" + ( days == 1 ? '' : 's' ) + ", ";
+                message += underline(hours) + " hour" + ( hours == 1 ? '' : 's' ) + ", ";
+                message += underline(minutes) + " minute" + ( minutes == 1 ? '' : 's' ) + " and ";
+                message += underline(seconds) + " second" + ( seconds == 1 ? '' : 's' ) ;
 
-                message += "left!";
+                message += " left!";
 
                 timerMessage.html(message);
             }
         });
+    }
+
+    function elementSize() {
+
+        var entry = $(".entry");
+        var navbar = $(".navbar");
+        var rule = $(".rules");
+        var register = $(".register");
+        var theme = $(".theme");
+        var whatis = $(".what-is-it");
 
         var docuHeight = $(window).height();
 
-        entry.height(docuHeight - navbar.height());
+        var newHeight = docuHeight;// - navbar.height();
 
-        var h = entry.height();
+        if (entry.height() <= newHeight)
+            entry.height(newHeight);
 
-        $(".what-is").height(h);
-        $(".register").height(h);
-        $(".theme").height(h);
+        if (whatis.height() <= newHeight) {
+            whatis.height(newHeight);
+            console.log("setting height for whatis");
+        }
 
-        $("#time-div").css("marginTop", h / 4);
-    });
+        if (register.height <= newHeight) {
+            register.height(newHeight);
+            console.log("setting height for register");
+        }
+
+        if (theme.height() <= newHeight) {
+            theme.height(newHeight);
+            console.log("setting height for theme");
+        }
+
+        if (rule.height() <= newHeight) {
+            rule.height(newHeight);
+            console.log("setting height for rule");
+        }
+
+        $("#time-div").css("marginTop", newHeight / 4);
+    }
 </script>
 
