--- a/views/partials/rules.ejs
+++ b/views/partials/rules.ejs
@@ -1,5 +1,5 @@
 <div class="container-fluid border border-gray"></div>
-<div class="container-fluid bg-gray ">
+<div class="container-fluid bg-gray rules">
     <div class="container">
         <div class="row">
             <div class="col-md-offset-0">
