--- a/views/partials/theme.ejs
+++ b/views/partials/theme.ejs
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-offset-0 pd-5">
-                <h1 id="themes" class="text-shadow huge">Knocathon Theme</h1>
+                <h1 id="themes" class="text-shadow huge">Knockathon Theme</h1>
             </div>
         </div>
         <div class="row">
