Improvement in fonts and styling

--- a/views/partials/entry.ejs
+++ b/views/partials/entry.ejs
@@ -6,8 +6,8 @@
         <div class="row tit">
             <h1 class="tk-droid-serif text-shadow brown">Exzeo Knockathon</h1>
         </div>
-        <div class="row stit">
-            <h2 class="tk-acuta brown text-shadow">11 - 13 September 2015</h2>
+        <div class="row stit tk-anisette-petite">
+            <h2 class="brown text-shadow">11 - 13 September 2015</h2>
         </div>
     </div>
 </div>
