--- a/views/partials/rules.ejs
+++ b/views/partials/rules.ejs
@@ -3,11 +3,11 @@
     <div class="container">
         <div class="row">
             <div class="col-md-offset-0">
-                <h1 id="rules" class="text-shadow huge">Rules &amp; Guidelines</h1>
+                <h1 id="rules" class="text-shadow huge">Rules and Guidelines</h1>
             </div>
         </div>
-        <div class="row">
-            <div class="col-md-8 col-md-offset-0 tk-acuta list">
+        <div class="row tk-anisette-petite">
+            <div class="col-md-8 col-md-offset-0 list">
                 <h2 class="medium">Team Formation</h2>
                 <ul>
                     <li>3-4 members are required in a team. No more or less is accepted.</li>
@@ -27,8 +27,8 @@
                 </ul>
             </div>
         </div>
-        <div class="row">
-            <div class="col-md-8 col-md-offset-0 tk-acuta list">
+        <div class="row tk-anisette-petite">
+            <div class="col-md-8 col-md-offset-0 list">
                 <h2 class="medium">Facilities</h2>
                 <ul>
                     <li>Dinner, Snacks, Breakfast and lunch will be arranged for all members who'll stay in the
@@ -39,8 +39,8 @@
                 </ul>
             </div>
         </div>
-        <div class="row pd-5">
-            <div class="col-md-8 col-md-offset-0 tk-acuta list">
+        <div class="row pd-5 tk-anisette-petite">
+            <div class="col-md-8 col-md-offset-0 list">
                 <h2 class="medium">Facilities</h2>
                 <ul>
                     <li>The ideas will be evaluated by an independent panel of judges.</li>
