--- a/views/partials/theme.ejs
+++ b/views/partials/theme.ejs
@@ -7,7 +7,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-8 col-md-offset-0 tk-acuta list">
+            <div class="col-md-8 col-md-offset-0 tk-anisette-petite list">
                 <p><strong>Now the plot thickens .. </strong></p>
 
                 <p>The theme will be disclosed on <strong class="themeu">September 11th morning</strong> in this very same section, so hang around this
