--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -33,7 +33,6 @@
     margin: 0px;
     margin-top: 12px;
     font-size: 24px;
-    font-family: Helvetica, Arial, serif !important;
 }
 
 .brown {
@@ -59,7 +58,7 @@
 body {
     padding-top: 70px;
     position: relative;
-    font-size: 16px;
+    font-size: 18px;
 }
 
 .text-shadow {
@@ -132,4 +131,9 @@ body {
 
 .themeu {
     border-bottom: 2px solid #F4534B;
+}
+
+.list li {
+    line-height: 22px!important;
+    margin-top: 20px!important;
 }
