--- a/views/partials/what-is.ejs
+++ b/views/partials/what-is.ejs
@@ -7,7 +7,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-8 col-md-offset-0 tk-acuta medium text-shadow">
+            <div class="col-md-8 col-md-offset-0 tk-anisette-petite medium text-shadow">
                 <p>
                     Knockathon (or Hackathon, in general) is a very popular event in that computer programmers and
                     others
